--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Noto Sans", Arial, Helvetica, sans-serif;
+  font-style: italic;
   background-color: rgb(10, 10, 10);
   color: rgb(255, 255, 255);
   margin: 0;
@@ -37,12 +38,12 @@ header {
 .logo-container {
   display: flex;
   justify-content: center;
-  padding-left: 20px;
+  padding-left: 35px;
 }
 
 .warble-img {
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   float: left;
   position: relative;
   top: 9px;
@@ -100,8 +101,8 @@ header {
 }
 
 .short-info {
-  background-color: black;
-  font-style: italic;
+  background-color: rgb(255, 255, 255);
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
