--- a/source/css/style.css
+++ b/source/css/style.css
@@ -37,7 +37,7 @@ header {
 .logo-container {
   display: flex;
   justify-content: center;
-  padding-left: 30px;
+  width: 220px;
 }
 
 .warble-img {
