--- a/source/css/style.css
+++ b/source/css/style.css
@@ -22,13 +22,18 @@ a {
   color: #ffffff;
 }
 
+.no-margin {
+  margin: 0;
+  padding: 0;
+}
+
+/* Header */
+
 header {
   background-color: rgb(10, 10, 10);
   height: 46px;
-
   margin: 0;
   padding: 20px;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,14 +43,15 @@ header {
   display: flex;
   justify-content: center;
   width: 220px;
+  padding-left: 0px;
 }
 
 .warble-img {
-  width: 26px;
-  height: 26px;
+  width: 30px;
+  height: 30px;
   float: left;
   position: relative;
-  top: 9px;
+  top: 8px;
 }
 
 .warble-title {
@@ -56,47 +62,29 @@ header {
 .search-container {
   display: flex;
   align-items: center;
-  gap: 3px;
+  justify-content: space-between;
+}
+
+.search-svg,
+.cancel-svg {
+  background-color: rgb(20, 20, 20);
+  padding: 9px;
 }
 
 #search-box {
-  background-color: rgb(15, 15, 15);
+  background-color: rgb(20, 20, 20);
   color: white;
-  width: 520px;
-  height: 35px;
-  padding: 0px 20px;
-  margin: 0;
-  border: 1px solid rgb(31, 31, 31);
-}
-
-.search-button {
-  background-color: rgb(15, 15, 15);
-  width: 53px;
-  height: 37px;
+  width: 450px;
+  height: 34px;
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid rgb(31, 31, 31);
+  border: none;
 }
 
-.search-button img {
-  width: 15px;
-  height: 15px;
-}
-
-.header-button {
-  background-color: rgb(15, 15, 15);
-  color: white;
-  width: 55px;
-  height: 37px;
-  margin: 0;
-  padding: 0px 20px;
+.right-buttons-header {
   display: flex;
-  justify-content: center;
   align-items: center;
-  border: 1px solid rgb(31, 31, 31);
+  gap: 15px;
 }
 
 .short-info {
@@ -117,7 +105,7 @@ header {
   background-color: rgb(10, 10, 10);
 
   padding: 0px 20px;
-  margin: 25px 0px;
+  margin: 20px 0px;
   width: 220px;
   display: flex;
   flex-direction: column;
@@ -125,13 +113,12 @@ header {
   border-right: 1px solid rgb(90, 90, 90);
 }
 
-.showcase {
+.showcase-container {
   display: flex;
   flex-direction: column;
 }
 
 .showcase-title {
-  margin: 0;
   padding-bottom: 15px;
   text-align: center;
 }
@@ -150,11 +137,6 @@ header {
   padding-bottom: 5px;
 }
 
-.author {
-  display: flex;
-  gap: 10px;
-}
-
 .player {
   padding: 13px 0px;
   border-bottom: 1px solid rgb(90, 90, 90);
@@ -164,10 +146,26 @@ header {
   gap: 20px;
 }
 
+.author-box {
+  display: flex;
+  gap: 10px;
+}
+
 .author-icon {
   width: 45px;
   height: 45px;
   border-radius: 50%;
+}
+
+.author-infobox {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+}
+
+.author-info {
+  font-size: 10px;
 }
 
 .queue {
@@ -198,6 +196,15 @@ header {
   width: 60px;
   height: 60px;
   border-radius: 8px;
+}
+
+.song-title {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.author-nickname-in-queue {
+  font-size: 12px;
 }
 
 .reorder {
