--- a/source/css/style.css
+++ b/source/css/style.css
@@ -22,6 +22,11 @@ a {
   color: #ffffff;
 }
 
+ul,
+li {
+  list-style-type: none;
+}
+
 .no-margin {
   margin: 0;
   padding: 0;
@@ -42,6 +47,7 @@ header {
 .logo-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 220px;
   padding-left: 0px;
 }
@@ -50,8 +56,6 @@ header {
   width: 30px;
   height: 30px;
   float: left;
-  position: relative;
-  top: 8px;
 }
 
 .warble-title {
@@ -126,15 +130,7 @@ header {
 .song-cover {
   width: 220px;
   height: 220px;
-  border-radius: 20px;
-}
-
-.song-title {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 5px;
+  border-radius: 10px;
 }
 
 .player {
@@ -189,7 +185,6 @@ header {
 .songs-in-queue {
   display: flex;
   gap: 10px;
-  align-items: center;
 }
 
 .song-covers-in-queue {
@@ -207,15 +202,15 @@ header {
   font-size: 12px;
 }
 
-.reorder {
+.more-button {
+  height: 24px;
 }
 
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   flex: 1;
-  background-color: darkgreen;
   margin: 20px;
 }
 
@@ -223,4 +218,69 @@ header {
   display: flex;
   height: 70px;
   background-color: beige;
+}
+
+/* New Releases */
+
+.new-releases-section {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.new-releases-title-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 3px;
+}
+
+.new-releases-title {
+}
+
+.turn-pages-buttons {
+  display: flex;
+  gap: 20px;
+}
+
+.turn-pages-buttons img {
+  height: 25px;
+}
+
+.new-releases-list {
+  gap: 24px;
+  display: flex;
+}
+
+.new-release-box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.new-release-cover {
+  height: 180px;
+  width: 180px;
+  border-radius: 10px;
+}
+
+.new-release-title-box {
+  width: 174px;
+  padding: 0px 3px;
+}
+
+.new-release-author-box {
+  width: 174px;
+  display: flex;
+  gap: 7px;
+  padding: 0px 3px;
+}
+
+.new-release-author-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.new-release-author-info {
+  font-size: 9px;
 }
