--- a/source/css/style.css
+++ b/source/css/style.css
@@ -209,7 +209,7 @@ header {
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 20px;
   flex: 1;
   margin: 20px;
 }
