--- a/source/css/style.css
+++ b/source/css/style.css
@@ -25,6 +25,8 @@ a {
 ul,
 li {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .no-margin {
@@ -209,7 +211,7 @@ header {
 .hero {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   flex: 1;
   margin: 20px;
 }
@@ -285,9 +287,37 @@ header {
   font-size: 9px;
 }
 
+/* Recently played Section */
+
+.playlists-section {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .playlists-title-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 3px;
+}
+
+.playlists-title {
   font-size: 18px;
   font-weight: bold;
+  display: flex;
+}
+
+.recently-played-list {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 0px 5px;
+}
+
+.small-vertical-line {
+  width: 2px;
+  height: 16px;
+  background-color: white;
 }
 
 .gray {
@@ -296,4 +326,8 @@ header {
 
 .yellow {
   color: gold;
+}
+
+.author-playlist {
+  color: rgb(224, 224, 224);
 }
