--- a/source/css/style.css
+++ b/source/css/style.css
@@ -255,7 +255,7 @@ header {
 
 .new-releases-list {
   display: flex;
-  gap: 24px;
+  gap: 30px;
 }
 
 .rpc-list,
@@ -271,8 +271,6 @@ header {
 .new-release-box {
   display: flex;
   gap: 10px;
-  border-right: 1px solid white;
-  padding-right: 24px;
 }
 
 .rpc-box,
@@ -354,14 +352,18 @@ header {
   border: 1px solid gray;
 }
 
-.scroll-button {
-  width: 30px;
+.new-releases-scroll-btns {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.small-horizontal-line {
-  height: 2px;
-  width: 30px;
-  background-color: rgb(185, 185, 185);
+.next-circle {
+  width: 20px;
+}
+
+.previous-circle {
+  width: 20px;
 }
 
 /* Recently played Section */
@@ -456,10 +458,109 @@ header {
 }
 
 .rock-new-releases {
-  background-color: #1d1d1d;
-  height: 130px;
-  width: 1304px;
+  /* background-color: #1d1d1d; */
+  height: 110px;
+  width: 1284px;
   border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.rock-nr-section {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.rock-nr-title-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.rock-nr-title-box .options-button {
+  width: 20px;
+}
+
+.rock-nr-list {
+  display: flex;
+  gap: 14px;
+}
+
+.rock-nr-box {
+  display: flex;
+  gap: 10px;
+}
+
+.rock-nr-cover {
+  height: 80px;
+  width: 80px;
+  border-radius: 10px;
+}
+
+.rock-nr-infobox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 80px;
+}
+
+.rock-nr-title-box .song-title {
+  font-size: 13px;
+}
+
+.rock-nr-author-box {
+  display: flex;
+  gap: 7px;
+}
+
+.rock-nr-author-icon {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+
+.rock-nr-author-nickname {
+  font-size: 14px;
+}
+
+.rock-nr-author-info {
+  font-size: 7px;
+}
+
+.rock-nr-scroll-line {
+  position: relative;
+  width: 1284px;
+  height: 1px;
+  background-color: rgb(143, 143, 143);
+}
+
+.line {
+  position: relative;
+}
+
+.line::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 1px;
+  background: rgb(141, 141, 141);
+}
+
+.line::after {
+  content: "";
+  position: absolute;
+  left: 18%;
+  right: 80%;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 4px;
+  background: white;
+  border-radius: 4px;
 }
 
 .rock-playlists {
